--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
+    "d3": "^7.8.5",
     "sirv-cli": "^2.0.0"
   }
 }
