--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "d3": "^7.8.5",
+    "emoji-mart": "^5.5.2",
     "sirv-cli": "^2.0.0",
     "svelte-routing": "^2.10.0"
   }
